# -.-

./: .DS_Store.orig  CMakeLists.txt  Column.cpp  Particle.cpp  README.md  create_gas.cpp  iterate.cpp  main.cpp  random_walk.txt  run_simulation.cpp
Data/: distribution.txt
Data_Processing/: animation.py  plot.py
Headers/: CONSTANTS.h  Column.h  Particle.h  create_gas.h  iterate.h  run_simulation.h
Visuals/: animation.py  plot.py
